# vext

./: .clang-format  CMakeLists.txt  CMakePresets.json
cmake/: add_gtest.cmake  get_package.cmake
include/vext/: device.hpp  shape.hpp  tensor.hpp  type.hpp
include/vext/core/: type.hpp
include/vext/core/cpu/: allocator.hpp
include/vext/core/cpu/operations/: csr_scatter.hpp  csr_spmv.hpp  elementwise_binary.hpp  elementwise_logical.hpp  elementwise_unary.hpp  linear_algebra.hpp  memory.hpp  reduction.hpp
include/vext/core/cuda/: allocator.cuh
include/vext/core/cuda/operations/: csr_scatter.cuh  csr_spmv.cuh  elementwise_binary.cuh  elementwise_logical.cuh  elementwise_unary.cuh  linear_algebra.cuh  memory.cuh  reduction.cuh
include/vext/nn/: linear.hpp  module.hpp
include/vext/nn/activation/: elu.hpp  leaky_relu.hpp  relu.hpp  sigmoid.hpp  softmax.hpp
include/vext/nn/layer/: linear.hpp
include/vext/nn/utils/: init.hpp
src/: CMakeLists.txt  shape.cpp  tensor.cpp
src/cpu/: allocator.cpp  allocator.hpp  operations.cpp  operations.hpp
test/: CMakeLists.txt  allocator_cpu.cpp  operations_cpu.cpp  tensor.cpp  tensor_cpu.cpp
test/benchmark/: bench_cpu.cpp  bench_cuda.cu
test/cpu/: core_operations.cpp  nn.cpp  shape.cpp  tensor.cpp
test/cuda/: core_operations.cu  nn.cu  tensor.cu
